# EGoT-DCS

./: .gitignore  CMakeLists.txt  DCS_inverter.cpp  Dockerfile.buster  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp  simple-test.cpp
